--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="startBtn" onclick="start()">Start</button>
       </div>
       <div id="question-section">
+        <p><b>Guess the missing words!</b></p>
         <p><b>Tap blocks to reveal the full story</b></p>
         <br />
         <div id="text-container"></div>
